--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,22 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>GO-PC Build</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <noscript>
       <h1>Oeps... Om onze website te bezoeken moet je javascript aanzetten!</h1>
-      <p>Bekijk <a href="https://support.google.com/admanager/answer/12654?hl=nl">hier</a> hoe je dit moet doen!</p>
+      <p>
+        Bekijk
+        <a href="https://support.google.com/admanager/answer/12654?hl=nl"
+          >hier</a
+        >
+        hoe je dit moet doen!
+      </p>
     </noscript>
     <div id="root"></div>
   </body>
