🌟 Created the cards section.

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       <h1>Oeps... Om onze website te bezoeken moet je javascript aanzetten!</h1>
       <p>
         Bekijk
-        <a href="https://support.google.com/admanager/answer/12654?hl=nl"
+        <a href="https://support.google.com/admanager/answer/12654?hl=nl" target="_blank"
           >hier</a
         >
         hoe je dit moet doen!
