--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/static/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#0A142C" />
     <meta
       name="description"
       content="GO-PC Build is een studentenbedrijf van het GO-AO dat workshops geeft over computers bouwen. Hierin leer je hoe je zelf je eigen computer in ekaar steekt, een operating system (OS) installeerd en nog veel meer!"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/static/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/static/manifest.json" />
     <title>GO-PC Build</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
