--- a/public/index.html
+++ b/public/index.html
@@ -20,15 +20,30 @@
   </head>
   <body>
     <noscript>
-      <h1>Oeps... Om onze website te bezoeken moet je javascript aanzetten!</h1>
+      <h1>Oeps...</h1>
+      <h3>
+        JavaScript moet aan staan in je browser om onze website te
+        gebruiken!.
+      </h3>
       <p>
-        Bekijk
-        <a href="https://support.google.com/admanager/answer/12654?hl=nl" target="_blank"
-          >hier</a
+        Weet je niet hoe je dit moet aanzetten in je webbrowser?<br />
+        Geen probleem, hier is een handleiding voor de meest gebruikte browsers.
+      </p>
+      <p>
+        Klik <a href="https://www.enable-javascript.com/nl/">hier</a> om naar de
+        handleiding te gaan.<br />
+        <span style="opacity: 0.9; font-size: 75%"
+          >(<a href="https://www.enable-javascript.com/nl/"
+            >https://www.enable-javascript.com/nl/</a
+          >)</span
         >
-        hoe je dit moet doen!
       </p>
     </noscript>
     <div id="root"></div>
+    <script>
+      console.log("%c<▒▓█▓▒▒▓█▓▒▒▓█▓▒▒▓█▓▒▒▓█▓▒>\n%cWait a second!\n%cDON'T PASTE ANYTHING IN HERE AS IT COULD GIVE ATTACKERS ACCESS TO YOUR ACCOUNT!\n%c<▒▓█▓▒▒▓█▓▒▒▓█▓▒▒▓█▓▒▒▓█▓▒>", "color: red; font-size: 25px; font-weight: 700;", "color: red; font-size: 50px; -webkit-text-stroke: 2px black; font-weight: 700;", "color: red; font-size: 25px; -webkit-text-stroke: 1px black; font-weight: 700;", "color: red; font-size: 25px; font-weight: 700;");
+      console.log("%c<▒▓█▓▒▒▓█▓▒▒▓█▓▒▒▓█▓▒▒▓█▓▒>\n%cWacht even!\n%cPLAK HIER NIETS IN OMDAT HET AANVALLERS TOEGANG KAN GEVEN TOT JE ACCOUNT!\n%c<▒▓█▓▒▒▓█▓▒▒▓█▓▒▒▓█▓▒▒▓█▓▒>", "color: orange; font-size: 25px; font-weight: 700;", "color: orange; font-size: 50px; -webkit-text-stroke: 2px black; font-weight: 700;", "color: orange; font-size: 25px; -webkit-text-stroke: 1px black; font-weight: 700;", "color: orange; font-size: 25px; font-weight: 700;");
+      console.log("%c<▒▓█▓▒▒▓█▓▒▒▓█▓▒▒▓█▓▒▒▓█▓▒>\n%cAttendez un instant!\n%cNE COLLEZ RIEN ICI, CAR CELA POURRAIT DONNER AUX ATTAQUANTS L'ACCÈS À VOTRE COMPTE!\n%c<▒▓█▓▒▒▓█▓▒▒▓█▓▒▒▓█▓▒▒▓█▓▒>", "color: lightblue; font-size: 25px; font-weight: 700;", "color: lightblue; font-size: 50px; -webkit-text-stroke: 2px black; font-weight: 700;", "color: lightblue; font-size: 25px; -webkit-text-stroke: 1px black; font-weight: 700;", "color: lightblue; font-size: 25px; font-weight: 700;");
+    </script>
   </body>
 </html>
