--- a/public/viggo.html
+++ b/public/viggo.html
@@ -45,11 +45,10 @@
 <body>
     <h1>Welkom op de website van the order!</h1>
     <a href="mailto:fireplaysonline@hotmail.com">Verstuur me een mailtje!</a><br>
-<a href="https//discord.gg/DegzCWkwkw">discord</a>
+<a target="_blanc" href="https//discord.gg/DegzCWkwkw">discord</a>
     <br />
     <div>
         <img src="./doge.png" />
     </div>
 </body>
 </html>
-
