--- a/public/viggo.html
+++ b/public/viggo.html
@@ -45,7 +45,7 @@
 <body>
     <h1>Welkom op de website van the order!</h1>
     <a href="mailto:fireplaysonline@hotmail.com">Verstuur me een mailtje!</a><br>
-<a target="_blanc" href="https//discord.gg/DegzCWkwkw">discord</a>
+<a href="https://discord.gg/DegzCWkwkw">discord</a>
     <br />
     <div>
         <img src="./doge.png" />
