✨ Fixed natacha her mail :3

--- a/public/natacha.html
+++ b/public/natacha.html
@@ -43,7 +43,7 @@
 			<img src="doge.png" width="150px"/>
 			<h2>De koffie staat altijd klaar staat en een superlieve hond wacht</h2>
 		</div>
-		<footer><a href="mailto:natacha.bauwens@go-atheneumoudenaarde">Wanna Come? Love dogs? Send me a mail! </a></footer>
+		<footer><a href="mailto:natacha.bauwens@go-atheneumoudenaarde.be">Wanna Come? Love dogs? Send me a mail! </a></footer>
 		
 	</body>
 </html>
